feat: Update security reporting process and improve documentation
- Enhanced the security vulnerability reporting section in SECURITY.md to include preferred methods and detailed information on what to include in reports.
- Added a new environment configuration file (.env.example) for easier setup.
- Updated package.json description to reflect new features and technologies used.
- Improved Next.js configuration with experimental features, image optimization, and security headers.
- Refactored API calls to use validated Discogs credentials instead of exposing keys in URLs.
- Reorganized API error handling and removed deprecated files.
- Migrated collection management functions to a new API structure for better organization.
- Removed unused components (CollectionResults, CollectionSearch) to streamline the codebase.
- Added comprehensive changelog for version 1.0.0, detailing features, architecture, and deployment notes.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,15 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+
+# secrets and sensitive files
+secrets/
+*.key
+*.pem
+*.crt
+*.p12
+*.pfx
 
 # vercel
 .vercel
@@ -44,6 +53,3 @@ next-env.d.ts
 src/generated/
 *.db
 *.db-journal
-
-# local development files
-conversion-notes.md
